--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9.30.1",
     "eslint-config-next": "15.3.4",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0",
+    "prettier": "3.6.2",
     "typescript": "^5",
     "typescript-eslint": "^8.35.1"
   }
