--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "husky": "^8.0.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
+    "jest-styled-components": "^7.2.0",
     "lint-staged": "^16.1.2",
     "prettier": "3.6.2",
     "typescript": "^5",
