--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest --passWithNoTests --maxWorkers=50%",
     "test:watch": "jest --watch --maxWorkers=25%",
     "test:ci": "jest --runInBand",
+    "generate": "npx plop --plopfile generators/plopfile.js",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
@@ -38,6 +39,7 @@
     "jest-environment-jsdom": "^30.0.4",
     "jest-styled-components": "^7.2.0",
     "lint-staged": "^16.1.2",
+    "plop": "^4.0.1",
     "prettier": "3.6.2",
     "typescript": "^5",
     "typescript-eslint": "^8.35.1"
